// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryIcon render compute 1`] = `
<DocumentFragment>
  <svg
    class="emotion-0 emotion-1"
    style="height: 16px; width: 16px;"
    viewBox="0 0 16 16"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M0 0h16v16H0z"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="3"
        rx="1"
        width="2"
        x="5"
        y="13"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="3"
        rx="1"
        width="2"
        x="5"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="3"
        rx="1"
        width="2"
        x="9"
        y="13"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="3"
        rx="1"
        width="2"
        x="9"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="2"
        rx="1"
        width="3"
        x="13"
        y="5"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="2"
        rx="1"
        width="3"
        y="5"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="2"
        rx="1"
        width="3"
        x="13"
        y="9"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="2"
        rx="1"
        width="3"
        y="9"
      />
      <rect
        fill-rule="nonzero"
        height="10"
        rx="2"
        stroke="#4F0599"
        stroke-width="2"
        width="10"
        x="3"
        y="3"
      />
      <rect
        fill="#8C3FD8"
        fill-rule="nonzero"
        height="4"
        rx="1"
        width="4"
        x="6"
        y="6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`CategoryIcon render iot 1`] = `
<DocumentFragment>
  <svg
    class="emotion-0 emotion-1"
    style="height: 16px; width: 16px;"
    viewBox="0 0 16 16"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M4.799 1.823A1.43 1.43 0 0 1 5.776.058a1.415 1.415 0 0 1 1.757.985 1.436 1.436 0 0 1-.985 1.775 1.273 1.273 0 0 1-.387.049c-.618 0-1.187-.41-1.362-1.044zm4.687 1.005v.009a1.446 1.446 0 0 1-.948-1.794 1.406 1.406 0 0 1 1.769-.955 1.435 1.435 0 0 1-.405 2.808c-.135 0-.281-.02-.416-.068zM2.064 4.524a1.444 1.444 0 0 1-.125-2.028 1.412 1.412 0 0 1 2.009-.126c.59.526.648 1.432.126 2.028-.28.32-.675.477-1.062.477-.338 0-.677-.116-.948-.351zm9.886-.078v.01a1.448 1.448 0 0 1 .155-2.03 1.406 1.406 0 0 1 2 .158 1.436 1.436 0 0 1-.154 2.018 1.395 1.395 0 0 1-2.001-.156zM1.214 8.278A1.445 1.445 0 0 1 .016 6.64c.126-.78.85-1.317 1.623-1.2a1.426 1.426 0 0 1 1.188 1.639 1.423 1.423 0 0 1-1.4 1.209c-.068 0-.146 0-.213-.01zm11.944-1.072v-.06a1.418 1.418 0 0 1 1.208-1.618 1.43 1.43 0 0 1 1.605 1.219v.029c.009.02.009.049.018.069a1.447 1.447 0 0 1-1.236 1.608c-.068 0-.127.01-.184.01a1.44 1.44 0 0 1-1.411-1.257zM.625 11.174c-.32-.732 0-1.58.725-1.891.714-.322 1.554 0 1.874.722a1.448 1.448 0 0 1-.725 1.9 1.536 1.536 0 0 1-.58.117 1.405 1.405 0 0 1-1.294-.848zm12.745.868a1.453 1.453 0 0 1-.676-1.911 1.42 1.42 0 0 1 1.904-.683 1.44 1.44 0 0 1 .667 1.91 1.417 1.417 0 0 1-1.895.684zm-9.818 2.623a1.442 1.442 0 0 1-.405-1.99 1.411 1.411 0 0 1 1.97-.41 1.44 1.44 0 0 1 .407 1.99c-.27.42-.725.644-1.19.644-.27 0-.54-.078-.782-.234zm6.746-.351a1.443 1.443 0 0 1 .444-1.98h.01a1.408 1.408 0 0 1 1.952.459c.415.673.212 1.56-.455 1.979a1.41 1.41 0 0 1-1.951-.458zM7.892 16a1.42 1.42 0 0 1-1.411-1.453 1.426 1.426 0 0 1 1.44-1.413 1.43 1.43 0 0 1 1.4 1.452A1.42 1.42 0 0 1 7.902 16h-.01z"
        fill="#4F0A9D"
      />
      <path
        d="M11.781 7.875c0 2.112-1.697 3.825-3.792 3.825-2.094 0-3.79-1.713-3.79-3.825 0-2.113 1.696-3.826 3.79-3.826 2.095 0 3.792 1.713 3.792 3.826"
        fill="#8C3FD8"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`CategoryIcon render network 1`] = `
<DocumentFragment>
  <svg
    class="emotion-0 emotion-1"
    style="height: 16px; width: 16px;"
    viewBox="0 0 16 16"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M0 0h16v16H0z"
      />
      <g
        fill="#8C3FD8"
      >
        <path
          d="M7.955 4.883C3.583 4.883.038 6.258.038 7.955c0 1.696 3.545 3.072 7.917 3.072 4.373 0 7.917-1.376 7.917-3.072 0-1.697-3.544-3.072-7.917-3.072m0 1.5c3.773 0 5.969 1.058 6.377 1.572-.408.513-2.604 1.572-6.377 1.572-3.773 0-5.968-1.059-6.377-1.572.409-.514 2.604-1.572 6.377-1.572"
        />
        <path
          d="M7.955.039c-1.696 0-3.072 3.544-3.072 7.917 0 4.372 1.376 7.916 3.072 7.916 1.697 0 3.072-3.544 3.072-7.916 0-4.373-1.375-7.917-3.072-7.917m0 1.539c.514.409 1.572 2.604 1.572 6.378 0 3.773-1.058 5.968-1.572 6.376-.514-.408-1.572-2.603-1.572-6.376 0-3.774 1.058-5.97 1.572-6.378"
        />
      </g>
      <path
        d="M8 0A8 8 0 1 0 8 16.001 8 8 0 0 0 8 0m0 2.011A5.995 5.995 0 0 1 13.989 8a5.996 5.996 0 0 1-5.99 5.989A5.996 5.996 0 0 1 2.012 8 5.995 5.995 0 0 1 8 2.011"
        fill="#4F0599"
        mask="url(#b)"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`CategoryIcon render storage 1`] = `
<DocumentFragment>
  <svg
    class="emotion-0 emotion-1"
    style="height: 16px; width: 16px;"
    viewBox="0 0 16 16"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M0 0h16v16H0z"
      />
      <path
        d="M8 1.152L1.998 4.58v6.84L8 14.848l6.004-3.428V4.58L8 1.152z"
        fill-rule="nonzero"
        stroke="#4F0599"
        stroke-width="2"
      />
      <path
        d="M8 5l2.627 1.5v3L8.001 11 5.374 9.5v-3z"
        fill="#8C3FD8"
        fill-rule="nonzero"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`CategoryIcon render tools 1`] = `
<DocumentFragment>
  <svg
    class="emotion-0 emotion-1"
    style="height: 16px; width: 16px;"
    viewBox="0 0 16 16"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M0 0h16v16H0z"
      />
      <g
        fill-rule="nonzero"
      >
        <path
          d="M8 3.81l.85.35 1.25.52.9.32.35.86.53 1.25.35.85-.35.85-.53 1.25L11 11l-.86.35-1.25.53-.89.31-.85-.35-1.25-.53L5 11l-.36-.86-.48-1.29L3.81 8l.35-.85.52-1.25L5 5l.86-.36 1.25-.52.89-.31zM9 0H7l-.62 2.32-1.25.52-2-1.22-1.52 1.46 1.22 2.05-.51 1.25L0 7v2l2.32.58.52 1.25-1.23 2.09 1.47 1.47 2.05-1.23 1.25.52L7 16h2l.58-2.32 1.25-.52 2.05 1.23 1.47-1.47-1.23-2.05.52-1.25L16 9V7l-2.32-.58-.52-1.25 1.23-2-1.47-1.56-2.05 1.22-1.25-.51L9 0z"
          fill="#4F0A9D"
        />
        <path
          d="M8 6l.39.16.62.26.4.17.17.39.26.63L10 8l-.16.39-.26.62-.17.4-.4.17-.62.26L8 10l-.39-.16-.63-.26-.39-.17-.17-.4-.26-.62L6 8l.16-.39.26-.63.17-.39.39-.17.63-.26L8 6"
          fill="#8C3FD8"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`CategoryIcon render unknow 1`] = `
<DocumentFragment>
  <svg
    class="emotion-0 emotion-1"
    style="height: 16px; width: 16px;"
    viewBox="0 0 16 16"
  />
</DocumentFragment>
`;
